--- a/dept-service.properties
+++ b/dept-service.properties
@@ -6,4 +6,4 @@ spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 server.port=8081
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-
+welcome.message=Welcome To Dept Service
